# confluence-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/confluence-downloader/: README.md  SKILL.md
skills/confluence-downloader-review/: README.md  SKILL.md
skills/confluence-downloader-review/agents/: openai.yaml
skills/confluence-downloader-review/references/: confluence-downloader-cli.md
skills/confluence-downloader-review/scripts/: ensure_confluence_pdfs.py
skills/confluence-downloader/agents/: openai.yaml
skills/confluence-downloader/references/: confluence-downloader-cli.md
skills/confluence-downloader/scripts/: ensure_confluence_pdfs.py
src/confluence_downloader/: __init__.py  cli.py  client.py  config.py  downloader.py  manifest.py  models.py  render.py  tree.py  utils.py
src/confluence_pdf/: __init__.py  cli.py  client.py  config.py  downloader.py  errors.py  manifest.py  models.py  render.py
tests/: test_cli.py  test_client.py  test_config.py  test_downloader.py  test_manifest.py  test_render.py  test_tree.py  test_utils.py
