[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-pdf-context"
version = "0.1.0"
description = "Download Confluence Data Center pages as PDFs for LLM context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "weasyprint>=66,<67",
]

[project.scripts]
confluence-pdf = "confluence_pdf.cli:app"

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
